--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -31,3 +31,9 @@ spring:
       getter: none
       setter: none
       is-getter: none
+
+server.servlet:
+  encoding:
+    charset: UTF-8
+    enabled: true
+    force: true
